--- a/airline-development-security-front/src/app/Components/globales/alta-aviones/alta-aviones.component.html
+++ b/airline-development-security-front/src/app/Components/globales/alta-aviones/alta-aviones.component.html
@@ -1,3 +1,28 @@
-<p>
-  alta-aviones works!
-</p>
+<app-menu-analista></app-menu-analista>
+
+<div class="card">
+  <div class="card-body">
+    <form>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Marca</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Marca">
+      </div>
+      
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Modelo</label>
+        <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="Boeing 747">
+      </div>
+
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Matricula</label>
+        <input type="text" class="form-control" id="exampleFormControlInput3" placeholder="ADS10D">
+      </div>
+
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Cantidad de butacas</label>
+        <input type="text" class="form-control" id="exampleFormControlInput4" placeholder="50">
+      </div>
+      <button type="submit" class="btn btn-primary btn-block">Guardar</button>
+    </form>
+  </div>
+</div>
