--- a/airline-development-security-front/src/app/Components/shared/menu-global/menu-global.component.html
+++ b/airline-development-security-front/src/app/Components/shared/menu-global/menu-global.component.html
@@ -14,6 +14,9 @@
         <a class="nav-link" href="#">Registrar aviones</a>
       </li>
       
+      <li class="nav-item">
+        <a class="nav-link" href="#">Alta destinos</a>
+      </li>
     </ul>
     <button type="button" class="btn btn-outline-primary">Cerrar Sesion</button>
   </div>
