#5 Termino diseño de la pantalla programar vuelos
Termino el diseño de la pantalla programar vuelos. También hago cambios
en  alta-destinos y alta-aviones, agregando títulos.

--- a/airline-development-security-front/src/app/Components/globales/alta-aviones/alta-aviones.component.html
+++ b/airline-development-security-front/src/app/Components/globales/alta-aviones/alta-aviones.component.html
@@ -1,5 +1,9 @@
 <app-menu-global></app-menu-global>
 
+<div class="text-center menu-margin">
+    <h1>Alta de aviones</h1>
+</div>
+
 <div class="card">
   <div class="card-body">
     <form>
