--- a/airline-development-security-front/src/app/Components/globales/alta-destinos/alta-destinos.component.html
+++ b/airline-development-security-front/src/app/Components/globales/alta-destinos/alta-destinos.component.html
@@ -1,4 +1,9 @@
 <app-menu-global></app-menu-global>
+
+<div class="container distancia-menu">
+    <h1>Alta de destinos</h1>
+</div>
+
 <div class="container distancia-menu">
 <form>
   <div class="form-row">
