--- a/airline-development-security-front/src/app/Components/shared/menu-global/menu-global.component.html
+++ b/airline-development-security-front/src/app/Components/shared/menu-global/menu-global.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Airline</a>
+  <a class="navbar-brand" href="#">Security Airlines</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
