--- a/airline-development-security-front/src/app/Components/shared/menu-analista/menu-analista.component.html
+++ b/airline-development-security-front/src/app/Components/shared/menu-analista/menu-analista.component.html
@@ -7,15 +7,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/programarVuelos']">Inicio <span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Programar vuelos</a>
+        <a class="nav-link"  [routerLink]="['/programarVuelos']" >Programar vuelos</a>
       </li>
       
       <li class="nav-item">
-          <a class="nav-link" href="#">Analisis de ganancias</a>
+          <a class="nav-link" [routerLink]="['/analisisGanancias']">Analisis de ganancias</a>
         </li>
     </ul>
     <button type="button" class="btn btn-outline-primary">Cerrar Sesion</button>
