--- a/airline-development-security-front/src/app/Components/shared/menu-global/menu-global.component.html
+++ b/airline-development-security-front/src/app/Components/shared/menu-global/menu-global.component.html
@@ -7,15 +7,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/altaAviones']">Inicio <span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Registrar aviones</a>
+        <a class="nav-link" [routerLink]="['/altaAviones']">Registrar aviones</a>
       </li>
       
       <li class="nav-item">
-        <a class="nav-link" href="#">Alta destinos</a>
+        <a class="nav-link" [routerLink]="['/altaDestinos']">Alta destinos</a>
       </li>
     </ul>
     <button type="button" class="btn btn-outline-primary">Cerrar Sesion</button>
