Arreglo problemas en el front
Arreglo problemas en el front  con respecto al requerimiento

--- a/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
+++ b/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
@@ -6,7 +6,13 @@
 
 <div class="container distancia-menu">
 <form>
+    <div class="form-group">
+        <label for="inputCosto">Ruta</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="">
+      </div>
+  
   <div class="form-row">
+
     <div class="form-group col-md-6">
       <label for="inputInicio">Inicio</label>
       <input type="text" class="form-control" id="inputEmail4" placeholder="Brasil">
@@ -20,16 +26,6 @@
     <label for="inputCosto">Costo</label>
     <input type="text" class="form-control" id="inputAddress" placeholder="10000">
   </div>
-  
-  
-    <div class="form-group">
-      <label for="inputState">Aviones disponibles</label>
-      <select class="form-control">
-        <option>Avion1</option>
-        <option>Avion2</option>
-      </select>
-    </div>
-    
   
   <button type="submit" class="btn btn-primary btn-block">Guardar</button>
 </form>
