--- a/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
+++ b/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
@@ -4,7 +4,7 @@
     <h1>Alta de destinos</h1>
 </div>
 
-<div class="container distancia-menu">
+<div class="container menu-margin">
 <form>
     <div class="form-group">
         <label for="inputCosto">Ruta</label>
