Hago servicio del alta de destinos y validaciones del front
Hago servicio del alta de destios y las validaciones del front. Falta
probar el servicio cuando este el back.

--- a/airline-development-security-front/src/app/components/globales/alta-aviones/alta-aviones.component.html
+++ b/airline-development-security-front/src/app/components/globales/alta-aviones/alta-aviones.component.html
@@ -6,7 +6,7 @@
 
 <div class="card">
   <div class="card-body">
-    <form [formGroup]="form" (ng-submit)="guardar()" >
+    <form [formGroup]="form">
       <div class="form-group" >
         <label for="exampleFormControlInput1">Marca</label>
         <input type="text" name="marca" class="form-control" [ngClass]="{
