Correcciones en rutas
Hago correcciones en ruta y elimino partes que no se van a usar.

--- a/airline-development-security-front/src/app/components/shared/menu-vendedor/menu-vendedor.component.html
+++ b/airline-development-security-front/src/app/components/shared/menu-vendedor/menu-vendedor.component.html
@@ -7,15 +7,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/cerrarVuelos']" >Inicio <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/cerrar-vuelos']" >Inicio <span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/ventaTickets']" >Venta de Tickets</a>
+        <a class="nav-link" [routerLink]="['/venta-tickets']" >Venta de Tickets</a>
       </li>
       
       <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/cerrarVuelos']" >Cerrar vuelos</a>
+          <a class="nav-link" [routerLink]="['/cerrar-vuelos']" >Cerrar vuelos</a>
         </li>
     </ul>
     <button type="button" class="btn btn-outline-primary">Cerrar Sesion</button>
