--- a/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
+++ b/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
@@ -7,41 +7,14 @@
 <div class="container menu-margin">
 <form [formGroup]="form" >
     <div class="form-group">
-        <label for="inputRuta">Ruta</label>
+        <label for="inputRuta">Nombre del destino</label>
         <input type="text" class="form-control" [ngClass]="{
-          'is-invalid': form.controls.ruta.errors, 
-          'is-valid': form.controls.ruta.valid 
+          'is-invalid': form.controls.name.errors, 
+          'is-valid': form.controls.name.valid 
         }"
-        placeholder="" formControlName="ruta">
+        placeholder="" formControlName="name">
       </div>
-  
-  <div class="form-row">
-
-    <div class="form-group col-md-6">
-      <label for="inputInicio">Inicio</label>
-      <input type="text" class="form-control" [ngClass]="{
-        'is-invalid': form.controls.inicio.errors, 
-        'is-valid': form.controls.inicio.valid 
-      }"
-      placeholder="Brasil" formControlName="inicio">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputDestino">Destino</label>
-      <input type="text" class="form-control" [ngClass]="{
-        'is-invalid': form.controls.destino.errors, 
-        'is-valid': form.controls.destino.valid 
-      }"
-       placeholder="Argentina" formControlName="destino">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputCosto">Costo</label>
-    <input type="text" class="form-control" [ngClass]="{
-      'is-invalid': form.controls.costo.errors, 
-      'is-valid': form.controls.costo.valid 
-    }"
-    placeholder="10000" formControlName="costo">
-  </div>
+ 
   
   <button type="submit" class="btn btn-primary btn-block" [disabled]="!form.valid" (click)="guardarAltaDestino()" >Guardar</button>
 </form>
