--- a/airline-development-security-front/src/app/components/login/login/login.component.html
+++ b/airline-development-security-front/src/app/components/login/login/login.component.html
@@ -7,19 +7,24 @@
 
                 <input class="form-control input-sm"
                        id="username"
-                       placeholder="Username"
+                       name="username"
+                       [(ngModel)] = "usuarioObject.username"
                        />
 
                 <input type="password"
                        class="form-control input-sm"
+                       name="password"
                        id="password"
                        placeholder="Password"
-                        />
+                       [(ngModel)] = "usuarioObject.password" />
             </div>
 
             <div class="form-group">
-                <input type="submit" class="btn btn-default col-sm-12 col-md-12" value="Log in" />
+                <input type="submit" class="btn btn-default col-sm-12 col-md-12" value="Log in" (click)="peticionLogin()" />
             </div>
         </form>
     </div>
 </div>
+
+{{ usuarioObject.username | json }}
+{{ usuarioObject.password | json }}
