--- a/airline-development-security-front/src/app/components/shared/menu-vendedor/menu-vendedor.component.html
+++ b/airline-development-security-front/src/app/components/shared/menu-vendedor/menu-vendedor.component.html
@@ -18,6 +18,6 @@
           <a class="nav-link" [routerLink]="['/cerrar-vuelos']" >Cerrar vuelos</a>
         </li>
     </ul>
-    <button type="button" class="btn btn-outline-primary">Cerrar Sesion</button>
+    <button type="button" [routerLink]="['/login']" class="btn btn-outline-primary">Cerrar Sesion</button>
   </div>
 </nav>
