--- a/airline-development-security-front/src/app/components/shared/menu-global/menu-global.component.html
+++ b/airline-development-security-front/src/app/components/shared/menu-global/menu-global.component.html
@@ -17,7 +17,11 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/alta-destinos']">Alta destinos</a>
       </li>
+
+      <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/alta-rutas']">Alta Rutas</a>
+        </li>
     </ul>
-    <button type="button" class="btn btn-outline-primary">Cerrar Sesion</button>
+    <button type="button" [routerLink]="['/login']" class="btn btn-outline-primary">Cerrar Sesion</button>
   </div>
 </nav>
