--- a/airline-development-security-front/src/app/components/globales/alta-aviones/alta-aviones.component.html
+++ b/airline-development-security-front/src/app/components/globales/alta-aviones/alta-aviones.component.html
@@ -4,6 +4,16 @@
     <h1>Alta de aviones</h1>
 </div>
 
+
+<alert type="success" *ngIf="flag" dismissOnTimeout="3000">
+  <strong>Alta exitosa!</strong> El alta del avion fue correcto.
+</alert>
+
+<alert type="danger" *ngIf="flagError" dismissOnTimeout="2000">
+  <strong>Alta Incorrecta!</strong> Vuelva a intentarlo
+</alert>
+
+
 <div class="card">
   <div class="card-body">
     <form [formGroup]="form">
