--- a/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
+++ b/airline-development-security-front/src/app/components/globales/alta-destinos/alta-destinos.component.html
@@ -3,7 +3,14 @@
 <div class="container distancia-menu">
     <h1>Alta de destinos</h1>
 </div>
+<alert type="success" *ngIf="flag" dismissOnTimeout="3000">
+    <strong>Alta exitosa!</strong> El alta del destino fue correcto.
+  </alert>
 
+  <alert type="danger" *ngIf="flagError" dismissOnTimeout="2000">
+    <strong>Alta Incorrecta!</strong> Vuelva a intentarlo
+  </alert>
+  
 <div class="container menu-margin">
 <form [formGroup]="form" >
     <div class="form-group">
